# dl

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  default.nix  dhs-mode.el  dl-mode.el  dl.cabal  dual-lang-mode.el  dualpp.cabal  shell.nix  temp.dl  trickGHC.txt
examples/: answers.dl  apply2.dl  apply4.dl  applyNegPair.dl  applyWith.dl  arith.dl  bool.dhs  bool.dl  bool2.dhs  bool3.dl  boolWith.dl  caseVar.dl  const.dl  const2.dl  control.dl  cyc.dl  delayFun.dl  delayWith.dl  either.dhs  either.dl  evens.dl  evens20.dl  evens20_coiter.dl  evens_coiter.dl  fib.dl  fib20.dl  fib20_coiter.dl  fib20_coiter_data.dl  fib20_data.dl  fib_coiter.dl  fib_coiter_data.dl  fib_data.dl  lam.dl  lam2.dl  lambda.dl  lambdaBool.dl  let.dhs  nats.dhs  nats.dl  negBoolFun.dl  (+52 more)
examples/source/: abort.dl  answers.dl  apply.dl  apply2.dl  apply3.dl  apply4.dl  applyNegPair.dl  applyWith.dl  arith.dl  bool.dl  bool2.dl  bool3.dl  boolWith.dl  caseVar.dl  coiter_loop.dl  const.dl  const2.dl  constNested.dl  control.dl  control2.dl  controlDelim.dl  copatPat.dl  cyc.dl  delay.dl  delayFun.dl  delayNested.dl  delayWith.dl  enum.dl  evens20.dl  evens_coiter.dl  fib.dl  fib100.dl  fib100_coiter.dl  fib20_data.dl  fib_coiter.dl  id.dl  lam.dl  lam2.dl  let.dl  list.dl  (+49 more)
haskell/DL/: Backend.hs  IO.hs  Interpreter.hs  Judgement.hs  Main.hs  Pipelines.hs  Prelude.hs  Pretty.hs  Rename.hs  Translation.hs  Typecheck.hs  Utils.hs
haskell/DL/Backend/: Haskell.hs  JavaScript.hs  ML.hs  Racket.hs
haskell/DL/Backend/Haskell/: Syntax.hs  Translation.hs
haskell/DL/Backend/JavaScript/: Syntax.hs  Translation.hs
haskell/DL/Backend/ML/: Syntax.hs  Translation.hs
haskell/DL/Backend/Racket/: Syntax.hs  Translation.hs
haskell/DL/Core/: Intercompilation.hs
haskell/DL/Core/Codata/: Syntax.hs
haskell/DL/Core/Data/: Syntax.hs  ToLdata.hs
haskell/DL/DMach/: CodeGen.hs  Syntax.hs  Translation.hs
haskell/DL/Evaluation/: Interpreter.hs  Strategy.hs
haskell/DL/Flat/: Backends.hs  Interpreter.hs  Machine.hs  Syntax.hs  ToLcodata.hs  ToLdata.hs
haskell/DL/Flat/Backend/: Haskell.hs  JavaScript.hs  ML.hs  Racket.hs
haskell/DL/Flat/Backend/Haskell/: Syntax.hs  Translation.hs
haskell/DL/Flat/Backend/JavaScript/: Syntax.hs  Translation.hs
haskell/DL/Flat/Backend/ML/: Syntax.hs  Translation.hs
haskell/DL/Flat/Backend/Racket/: Syntax.hs  Translation.hs
haskell/DL/General/: Kind.hs  Strategy.hs  Top.hs  Type.hs  Variable.hs
haskell/DL/LLVM/: FromDMach.hs  Syntax.hs
haskell/DL/Parser/: Lexer.x  Parser.y
haskell/DL/Surface/: Flatten.hs  Prelude.hs  Rename.hs  Syntax.hs  Typecheck.hs
haskell/DL/Syntax/: Flat.hs  Module.hs  Term.hs  Top.hs  Type.hs  Variable.hs
haskell/DL/Utils/: FreeVars.hs  IO.hs  Pretty.hs  StdMonad.hs
src/: #HsSyn.hs#  .#HsSyn.hs  AST.hs  AlphaEq.hs  DualLanguage.hs  DualPrelude.hs  DualSyn.hs  Flatten.hs  HsSyn.hs  IO.hs  Interp.hs  Interpreter.hs  Judgement.hs  KindSyn.hs  Lexer.x  MLSyn.hs  Machine.hs  Main.hs  Parser.y  Pretty.hs  RacketSyn.hs  Syn.hs  Translation.hs  TypeSyn.hs  Utils.hs  VariableSyn.hs
src/DL/: AlphaEq.hs  Flatten.hs  IO.hs  Interpreter.hs  Judgement.hs  Main.hs  Prelude.hs  Pretty.hs  Translation.hs
src/DL/Backend/Haskell/: Syntax.hs
src/DL/Backend/ML/: Syntax.hs
src/DL/Backend/Racket/: Syntax.hs
src/DL/Parser/: Parser.y
src/DL/Syntax/: Kind.hs  Term.hs  Type.hs  Variable.hs
src/Parser/: Lexer.x  Parser.y
src/Syntax/: Dual.hs  Hs.hs  ML.hs  Variable.hs
src/Syntax/Typed/: Dual.hs  Kind.hs  Type.hs
tests/: Tests.hs
