name:                dl
version:             0.0.0.1
synopsis:            A simple dual data language
homepage:            zachsully.com
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable dl
  main-is:             DL/Main.hs
  default-extensions:  UnicodeSyntax
  GHC-Options :       -Wall -j6 -Werror
  hs-source-dirs:      haskell
  other-modules:       DL.Backend,
                       DL.Backend.Haskell,
                       DL.Backend.Haskell.Syntax,
                       DL.Backend.Haskell.Translation,
                       DL.Backend.JavaScript,
                       DL.Backend.JavaScript.Translation,
                       DL.Backend.JavaScript.Syntax,
                       DL.Backend.ML,
                       DL.Backend.ML.Translation,
                       DL.Backend.ML.Syntax,
                       DL.Backend.Racket,
                       DL.Backend.Racket.Translation,
                       DL.Backend.Racket.Syntax,
                       DL.Prelude,
                       DL.IO,
                       DL.Evaluation.Interpreter,
                       DL.Evaluation.Strategy,
                       DL.Rename,
                       DL.Typecheck,
                       DL.Parser.Lexer,
                       DL.Parser.Parser,
                       DL.Pretty,
                       DL.Syntax.Top,
                       DL.Syntax.Term,
                       DL.Syntax.Flat,
                       DL.Syntax.Type,
                       DL.Syntax.Kind,
                       DL.Syntax.Variable,
                       DL.Utils
  build-tools:         alex, happy
  build-depends:       base                 >= 4.8,
                       directory            >= 1.3,
                       ghc                  >= 8.0,
                       process              >= 1.6,
                       array                >= 0.5,
                       mtl                  >= 2.2,
                       optparse-applicative >= 0.1,
                       containers           >= 0.5

  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  default-extensions:  UnicodeSyntax
  hs-source-dirs:      tests,haskell
  other-modules:       DL.Backend,
                       DL.Backend.Haskell,
                       DL.Backend.Haskell.Syntax,
                       DL.Backend.Haskell.Translation,
                       DL.Backend.JavaScript,
                       DL.Backend.JavaScript.Translation,
                       DL.Backend.JavaScript.Syntax,
                       DL.Backend.ML,
                       DL.Backend.ML.Translation,
                       DL.Backend.ML.Syntax,
                       DL.Backend.Racket,
                       DL.Backend.Racket.Translation,
                       DL.Backend.Racket.Syntax,
                       DL.Prelude,
                       DL.IO,
                       DL.Evaluation.Interpreter,
                       DL.Evaluation.Strategy,
                       DL.Typecheck,
                       DL.Parser.Lexer,
                       DL.Parser.Parser,
                       DL.Pretty,
                       DL.Syntax.Top,
                       DL.Syntax.Term,
                       DL.Syntax.Flat,
                       DL.Syntax.Type,
                       DL.Syntax.Kind,
                       DL.Syntax.Variable,
                       DL.Utils
  build-depends:       base                 >= 4.8,
                       ghc                  >= 8.0,
                       array                >= 0.5,
                       mtl                  >= 2.2,
                       optparse-applicative >= 0.1,
                       containers           >= 0.5,
                       directory            >= 1.3,
                       process              >= 1.6,
                       filepath             >= 1.4
  default-language:    Haskell2010