name:                dl
version:             0.0.0.1
synopsis:            A simple dual data language
homepage:            zachsully.com
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable dl
  main-is:             DL/Main.hs
  default-extensions:  UnicodeSyntax, GADTs, KindSignatures
  GHC-Options :       -Wall -j6 -Werror
  hs-source-dirs:      haskell
  other-modules:       DL.Backend,
                       DL.Pipelines,
                       DL.Core.Data.Syntax,
                       DL.Core.Codata.Syntax,
                       DL.Core.Intercompilation,
                       DL.General.Top,
                       DL.General.Type,
                       DL.General.Kind,
                       DL.General.Variable,
                       DL.General.Strategy,
                       DL.Surface.Rename,
                       DL.Surface.Typecheck,
                       DL.Surface.Syntax,
                       DL.Surface.Flatten,
                       DL.Surface.Prelude,
                       DL.Parser.Lexer,
                       DL.Parser.Parser,
                       DL.Flat.Syntax,
                       DL.Flat.Interpreter,
                       DL.Flat.ToLdata,
                       DL.Flat.ToLcodata,
                       DL.Flat.Backends,
                       DL.Flat.Backend.Haskell,
                       DL.Flat.Backend.Haskell.Syntax,
                       DL.Flat.Backend.Haskell.Translation,
                       DL.Flat.Backend.JavaScript,
                       DL.Flat.Backend.JavaScript.Translation,
                       DL.Flat.Backend.JavaScript.Syntax,
                       DL.Flat.Backend.ML,
                       DL.Flat.Backend.ML.Translation,
                       DL.Flat.Backend.ML.Syntax,
                       DL.Flat.Backend.Racket,
                       DL.Flat.Backend.Racket.Translation,
                       DL.Flat.Backend.Racket.Syntax,
                       DL.DMach.Translation,
                       DL.DMach.Syntax,
                       DL.Utils.IO,
                       DL.Utils.StdMonad,
                       DL.Utils.FreeVars,
                       DL.Utils.Pretty
  build-tools:         alex, happy
  build-depends:       base                 >= 4.8,
                       directory            >= 1.3,
                       ghc                  >= 8.0,
                       process              >= 1.6,
                       array                >= 0.5,
                       mtl                  >= 2.2,
                       optparse-applicative >= 0.1,
                       containers           >= 0.5

  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  default-extensions:  UnicodeSyntax, GADTs, KindSignatures
  hs-source-dirs:      tests,haskell
  other-modules:       DL.Backend,
                       DL.Core.Data.Syntax,
                       DL.Core.Codata.Syntax,
                       DL.Core.Intercompilation,
                       DL.General.Top,
                       DL.General.Type,
                       DL.General.Kind,
                       DL.General.Variable,
                       DL.General.Strategy,
                       DL.Surface.Rename,
                       DL.Surface.Typecheck,
                       DL.Surface.Syntax,
                       DL.Surface.Flatten,
                       DL.Surface.Prelude,
                       DL.Parser.Lexer,
                       DL.Parser.Parser,
                       DL.Flat.Syntax,
                       DL.Flat.Interpreter,
                       DL.Flat.ToLdata,
                       DL.Flat.ToLcodata,
                       DL.Flat.Backend.Haskell,
                       DL.Flat.Backend.Haskell.Syntax,
                       DL.Flat.Backend.Haskell.Translation,
                       DL.Flat.Backend.JavaScript,
                       DL.Flat.Backend.JavaScript.Translation,
                       DL.Flat.Backend.JavaScript.Syntax,
                       DL.Flat.Backend.ML,
                       DL.Flat.Backend.ML.Translation,
                       DL.Flat.Backend.ML.Syntax,
                       DL.Flat.Backend.Racket,
                       DL.Flat.Backend.Racket.Translation,
                       DL.Flat.Backend.Racket.Syntax,
                       DL.Utils.IO,
                       DL.Utils.StdMonad,
                       DL.Utils.FreeVars,
                       DL.Utils.Pretty
  build-depends:       base                 >= 4.8,
                       ghc                  >= 8.0,
                       array                >= 0.5,
                       mtl                  >= 2.2,
                       optparse-applicative >= 0.1,
                       containers           >= 0.5,
                       directory            >= 1.3,
                       process              >= 1.6,
                       filepath             >= 1.4
  default-language:    Haskell2010