name:                dualpp
version:             0.0.0.1
synopsis:            A preprocessor for codata and copattern matching in Haskell
homepage:            zachsully.com
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable dualpp
  main-is:             Main.hs
  GHC-Options :       -Wall -j6
  hs-source-dirs:      src
  build-tools:         alex, happy

  other-modules:       Lexer, Parser

  build-depends:       base                 >= 4.8,
                       ghc                  >= 8.0,
                       array                >= 0.5,
                       mtl                  >= 2.2,
                       optparse-applicative >= 0.1

  default-language:    Haskell2010